Revert "Constrain sidebar width and prevent overflow"
This reverts commit 4ceee1d4f43e7151b2449ee0c701d73a68de45ff.

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -29,8 +29,6 @@
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
-    max-width: 220px;
-    overflow-x: hidden;
 
     &:hover {
       opacity: 1;
